--- a/package.json
+++ b/package.json
@@ -24,6 +24,6 @@
     "ghost-sync": "botpress ghost-sync",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Ritesh Singh",
+  "author": "Ritesh S",
   "license": "AGPL-3.0-only"
 }
